--- a/views/contents/module_structure.html
+++ b/views/contents/module_structure.html
@@ -3,8 +3,8 @@
 	<h2>Modulo <img src="http://www.antena3.com/public/img/grupo-atresmedia.svg" width="150px" style="vertical-align:middle">
 	</h2>
 	<ul>
-		<li><p><strong><a href="http://gruntjs.com/">Grunt</a></strong> (Gestiona las tareas automatizadas del proyecto)</p></li>
-		<li><p><strong><a href="http://browserify.org/">Browserify</a></strong> (Genera el modulo final para ser consumido)</p></li>
+		<li><p><strong><a href="http://gruntjs.com/">Grunt <img src="http://gruntjs.com/img/grunt-logo.svg" width="50px" style="vertical-align:middle" alt=""></a></strong> (Gestiona las tareas automatizadas del proyecto)</p></li>
+		<li><p><strong><a href="http://browserify.org/">Browserify <img src="http://browserify.org/images/wizard_hat_blue.png" width="50px" alt="" style="vertical-align:middle;"></a></strong> (Genera el modulo final para ser consumido)</p></li>
 		<li><p><strong><a href="https://mozilla.github.io/nunjucks/">Nunjucks</a> [nunjucksify]</strong> (Motor de plantillas que usa el módulo)</p></li>
 		<li><p><strong><a href="https://babeljs.io/">Babel <img src="https://babeljs.io/images/logo.svg" width="50px" alt="" style="vertical-align:middle; background-color:#f5da55;"></a> [babelify]</strong> (Nos permite usar ES6 en nuestros módulos)</p></li>
 	</ul>
