--- a/views/contents/module_entry_point.html
+++ b/views/contents/module_entry_point.html
@@ -38,8 +38,8 @@
 		<li>
 			<p>Se suele utilizar el atributo <strong>data-theme</strong> del elemento html para gestionar distintas vistas.</p>
 		</li>
-		<li><p>La vista que se importa suele ser una vista <strong>Backbone</strong></p>, por lo que el primer argumento (opts) es siempre un objecto que backbone puede interpretar.</li>
-		<li><p>El segundo argumento (pubsub) es el canal de <strong>publicación/subscripcion</strong> que suele estar declarado en todos los sites en una etiqueta "script":s</p>
+		<li><p>La vista que se importa suele ser una vista <strong>Backbone</strong>, por lo que el primer argumento (opts) es siempre un objecto que backbone puede interpretar.</p></li>
+		<li><p>El segundo argumento (pubsub) es el canal de <strong>publicación/subscripcion</strong> que suele estar declarado en todos los sites en una etiqueta "script"</p>
 		<pre><code class="javascript">
 		var evt_agr = _.clone(Backbone.Events);
 		</code></pre></li>
